src/objects/Volunteer_Recurrence_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Recurrence Schedules</relationshipLabel>
        <relationshipName>Volunteer_Recurrence_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Days_of_Week__c</fullName>
        <label>Days of Week</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_End_Date__c</fullName>
        <label>Schedule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Start_Date_Time__c</fullName>
        <label>Schedule Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Volunteer_Hours_Status__c</fullName>
        <inlineHelpText>The Volunteer Hours Status value to specify on newly created Hours records.</inlineHelpText>
        <label>Volunteer Hours Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volunteer Job</label>
        <referenceTo>Volunteer_Job__c</referenceTo>
        <relationshipLabel>Volunteer Recurrence Schedules</relationshipLabel>
        <relationshipName>Volunteer_Recurrence_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weekly_Occurrence__c</fullName>
        <label>Weekly Occurrence</label>
        <picklist>
            <picklistValues>
                <fullName>Every</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1st</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5th</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Volunteer Recurrence Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllVRS</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Volunteer_Job__c</columns>
        <columns>Weekly_Occurrence__c</columns>
        <columns>Days_of_Week__c</columns>
        <columns>Schedule_Start_Date_Time__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VRS-{00000}</displayFormat>
        <label>VRS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Recurrence Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>